--- a/package.json
+++ b/package.json
@@ -13,8 +13,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@fluentui/react-icons": "2.0.234",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.4",
+    "@fabric-msft/fabric-react": "0.1.3-beta",
+    "@fabric-msft/fluent-react": "0.1.1-beta",
+    "@fluentui/tokens": "1.0.0-alpha.9",
+    "@fluentui/web-components": "3.0.0-beta.6",
+    "@fabric-msft/theme": "0.1.0-beta",
+    "@microsoft/fast-foundation": "3.0.0-alpha.31"
   },
   "scripts": {
     "start": "react-scripts start",
